--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         <div class="nav-links-container">
           <ul class="nav-links">
             <li><a href="#about">Über mich</a></li>
-            <li><a href="#experience">Erfahung</a></li>
+            <li><a href="#experience">Erfahrung</a></li>
             <li><a href="#projects">Projekte</a></li>
             <li><a href="#contact">Kontakt</a></li>
           </ul>
